fix: Set body to overflow-x: hidden;
This prevents the horizontal scrollbar from appearing when content
is taller than the window.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ html {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 62.5%;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 .content {
